# gecode

./: CMakeLists.txt  Makefile.in  changelog.in  configure.ac  configure.ac.in  gecode.m4
contribs/quacode/: CMakeLists.txt
contribs/quacode/examples/: connect-four.cpp
contribs/quacode/quacode/search/sequential/: qdfs.hh
examples/: all-interval.cpp  alpha.cpp  archimedean-spiral.cpp  bacp.cpp  bibd.cpp  bin-packing.cpp  black-hole.cpp  car-sequencing.cpp  cartesian-heart.cpp  colored-matrix.cpp  crew.cpp  crossword.cpp  crowded-chess.cpp  descartes-folium.cpp  dominating-queens.cpp  domino.cpp  donald.cpp  efpa.cpp  eq20.cpp  golden-spiral.cpp  golf.cpp  golomb-ruler.cpp  graph-color.cpp  grocery.cpp  hamming.cpp  ind-set.cpp  kakuro.cpp  knights.cpp  langford-number.cpp  magic-sequence.cpp  magic-square.cpp  minesweeper.cpp  money.cpp  nonogram.cpp  open-shop.cpp  ortho-latin.cpp  partition.cpp  pentominoes.cpp  perfect-square.cpp  photo.cpp  (+12 more)
gecode/: driver.hh  flatzinc.hh  float.hh  int.hh  minimodel.hh  search.hh  set.hh
gecode/driver/: options.cpp  options.hpp  script.hpp
gecode/flatzinc/: ast.hh  flatzinc.cpp  lexer.yy.cpp  registry.cpp
gecode/flatzinc/mznlib/: gecode.mzn  value_precede_int.mzn  value_precede_set.mzn
gecode/float/: branch.cpp  branch.hh  nextafter.hpp
gecode/float/branch/: activity.cpp  merit.hpp  traits.hpp  val-commit.hpp  val-sel-commit.cpp  val-sel.hpp
gecode/float/rel/: lq-le.hpp
gecode/gist/: layoutcursor.hpp  mainwindow.cpp  node.hh  node.hpp  qtgist.cpp  qtgist.hh  stopbrancher.cpp  treecanvas.cpp  treecanvas.hh  visualnode.cpp  visualnode.hh
gecode/int/branch/: val.hpp
gecode/kernel/: core.cpp  core.hpp
gecode/minimodel/: bool-expr.cpp  int-arith.cpp  int-expr.cpp  ldsb.hpp
gecode/search/: cutoff.cpp  cutoff.hpp  rbs.hpp  stop.hpp  worker.hh
gecode/search/meta/: nogoods.hh  rbs.cpp  rbs.hh
gecode/search/parallel/: dfs.cpp  path.hh
gecode/search/sequential/: bab.hh  path.hh
gecode/set/: branch.cpp  branch.hh  ldsb.cpp  ldsb.hh
gecode/set/branch/: activity.cpp  merit.hpp  val-commit.hpp
gecode/support/: config.hpp.in  thread.hpp
misc/: genstatistics.perl
test/: assign.cpp  branch.cpp  ldsb.cpp  search.cpp
test/int/: arithmetic.cpp
test/set/: rel.cpp
